# flextree

./: CHANGELOG.md  CLIPBOARD_FEATURES.md  LICENSE  MANIFEST.in  README.md  __init__.py  examples.py  pyproject.toml  pytree.py  quick_examples.py  requirements.txt  setup.py  test_pytree.py
flextree/: __init__.py  examples.py  flextree.py  jsonui.py  test_flextree.py
flextree.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pytree/: __init__.py  examples.py  pytree.py  quick_examples.py
pytree.egg-info/: PKG-INFO  SOURCES.txt
simple_pytree.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
