[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flextree"
version = "0.3.1"
description = "FlexTree - A flexible and intuitive Python library for creating and manipulating tree data structures"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Zhenning Zhao", email = "znzhaopersonal@gmail.com"}
]
keywords = ["tree", "data-structure", "node", "hierarchy", "graph"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/znzhao/flextree"
"Bug Reports" = "https://github.com/znzhao/flextree/issues"
"Source" = "https://github.com/znzhao/flextree"
"Documentation" = "https://github.com/znzhao/flextree#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["flextree*"]

[tool.pytest.ini_options]
testpaths = ["test_flextree.py"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]

python_functions = ["test_*"]

